# bazed

./: README.md
examples/: .eslintignore  .gitignore  .prettierignore  BUILD.bazed  Cargo.toml  index.d.ts  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json
examples/base/js/: BUILD.bazed  bytes.ts
examples/base/nest/: BUILD.bazed  logger.ts
examples/base/node/: BUILD.bazed  fs.ts  lifecycle.ts
examples/base/ui/: BUILD.bazed  button.tsx  utils.ts
examples/cs/: BUILD.bazed  Cargo.toml  chart.py  labels.py  lib.rs
examples/ml/: BUILD.bazed  attention.py  data_proc.py  dataset.py  eval.py  mlp.py  model.py  rotary.py  train.py
examples/platform/common/: BUILD.bazed  schema.ts
examples/platform/micro/: BUILD.bazed  main.py  schema.proto
examples/platform/micro/proto/: BUILD.bazed  schema_grpc_pb.d.ts  schema_grpc_pb.js  schema_pb.d.ts  schema_pb.js  schema_pb2.py  schema_pb2.pyi  schema_pb2_grpc.py
examples/platform/service/: .env.example  BUILD.bazed  api_controller.ts  config.ts  index.ts  main.ts
examples/platform/website/: .dockerfile  BUILD.bazed
examples/platform/website/src/pages/: _app.tsx  index.tsx
